--- a/Web App/views/partials/footer.ejs
+++ b/Web App/views/partials/footer.ejs
@@ -1,5 +1,7 @@
 </div>
 </body>
-<footer>
-    <p>Created by Jack Simcox 2025</p>
+<footer id="footer">
+    <div id="footer-content">
+        <p>Created by Jack Simcox 2025</p>
+    </div>
 </footer>
