--- a/Web App/views/partials/header.ejs
+++ b/Web App/views/partials/header.ejs
@@ -49,7 +49,7 @@
         ];
         %>
 
-        <% if(title !== "Login" && title !== "Register") { %> 
+        <% if(title !== "Login" && title !== "Register" && title !== "Welcome!") { %> 
             <% pages.forEach(page => { %>
                 <% if(page.name !== title) { %>
                     <a href=" <%= page.path %> "> <%= page.name %> </a>
@@ -58,13 +58,13 @@
         <% } %>
 
     </div>
-    <div class="Heading <%= (title === 'Login' || title === 'Register') ? 'centered-title' : '' %>">
-
-        <h1 class="title"> GlobeJumper </h1>            
-        <% if(title !== "Login" && title !== "Register") { %>
-            <h1 onclick="openNav()" class="Hamburger">&#8801;</h1>        
-        <% } %>
-
-    </div>
+    <header>
+        <div class="Heading-content <%= (title === 'Login' || title === 'Register' || title === 'Welcome!') ? 'centered-title' : '' %>">
+                <h1 onclick="window.location.href='/home'" style="cursor: pointer;" class="title"> Gl<i class="fa-solid fa-earth-europe fa-xs"></i>beJumper </h1>            
+                <% if(title !== "Login" && title !== "Register" && title !== "Welcome!") { %>
+                    <h1 onclick="openNav()" class="Hamburger">&#8801;</h1>        
+                <% } %>
+        </div>
+    </header>
     <div class="content">
-        <h2 style="text-align: center; margin-top: 0;"> <%= title %> </h2>
+        <h2 class="second-heading"> <%= title %> </h2>
