--- a/Web App/views/partials/header.ejs
+++ b/Web App/views/partials/header.ejs
@@ -12,6 +12,10 @@
     <!-- polygon Detection to stop users from clicking ocean -->
     <script src="https://unpkg.com/leaflet-pip/leaflet-pip.min.js"></script>
 
+    <!-- dart throw logic -->
+    <script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8/hammer.min.js"></script>
+    <script src="https://unpkg.com/leaflet.marker.slideto@0.2.0/Leaflet.Marker.SlideTo.js"></script>
+
     <% } %>
     <script src="NavBar.js" defer></script>
     
